<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">广告巴士通(测)</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_version">版权所有：巴士集团  v2.0</string>
    <string name="hint_log">请输入用户名</string>
    <string name="position">我的位置</string>
    <string name="more">更多</string>
    <string name="str_recorder_normal">按住 说话</string>
    <string name="str_recorder_recording">松开 结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消发送</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="jiaobanevent">交办事务</string>
    <string name="livework">现场办公</string>
    <string name="setting">设置</string>
    <string name="exist">注销</string>
    <string name="head">首页</string>
    <string name="station">站点查询</string>
    <string name="util">综合查询</string>
    <string name="event">事件处理</string>
    <string name="update">数据更新</string>
    <string name="bt_txt_roadname">查询路名</string>
    <string name="bt_txt_lineselect">查询线路</string>
    <string name="bt_txt_chepaiselect">查询车牌</string>
    <string name="bt_txt_pinpaiselect">查询品牌</string>
    <string name="bt_txt_chenumselect">查询车号</string>
    <string name="bt_txt_orderselect">查询订单</string>
    <string name="title_items_txt">全部菜单</string>
    <string name="items_statselect">站点查询</string>
    <string name="items_utilselect">综合查询</string>
    <string name="items_event">事务处理</string>
    <string name="items_guang">广告查询</string>
    <string name="items_tableselect">报表查询</string>
    <string name="items_stitfeed">站点养护</string>
    <string name="items_notchange">绿色出行</string>
    <string name="items_newscentre">新闻中心</string>
    <string name="items_systemhelp">系统帮助</string>
    <string name="rb_items_stit">候车亭查询</string>
    <string name="rb_items_carmid">车身媒体</string>
    <string name="rb_items_elcMah">电子设备</string>
    <string name="rb_items_fifty">移动电视</string>
    <string name="rb_items_feedselect">养护查询</string>
    <string name="rb_items_feedonlog">养护登记</string>
    <string name="rb_items_hostroy">历史记录</string>
    <string name="rb_items_carremaind">公交预报</string>
    <string name="rb_items_changeselect">换乘查询</string>
    <string name="rb_items_complnews">公司新闻</string>
    <string name="rb_items_cernews">行业新闻</string>
    <string name="rb_items_medianews">视频新闻</string>
    <string name="rb_items_helpinto">帮助入口</string>
    <string name="rb_items_lumingselect">路名查询</string>
    <string name="rb_items_lineselect">线路查询</string>
    <string name="rb_items_statpanselect">站牌查询</string>
    <string name="rb_items_houcheselect">候车亭查询</string>
    <string name="rb_items_zhangpanselect">信息屏查询</string>
    <string name="rb_items_shangingselect">发光片查询</string>
    <string name="rb_items_eventstart">事务发起</string>
    <string name="rb_items_eventchack">事务查询</string>
    <string name="rb_items_jinjievent">紧急事务</string>
    <string name="rb_items_meetnotiy">会议通知</string>
    <string name="rb_items_filejianfa">文件签发</string>
    <string name="rb_items_xianluselect">线路查询</string>
    <string name="rb_items_chepanselect">车牌查询</string>
    <string name="rb_items_pinpanselect">品牌查询</string>
    <string name="rb_items_chenumselect">车号查询</string>
    <string name="rb_items_orderselect">订单查询</string>
    <string name="bt_clearselect">清除查询</string>
    <string name="bt_sureselect">确认查询</string>
    <string name="bt_v">横屏</string>
    <string name="bt_h">竖屏</string>
    <string name="title_activity_send_event">SendEventActivity</string>
    <string name="title_activity_road_name">RoadNameActivity</string>
    <string name="title_activity_lineselect">LineselectActivity</string>
    <string name="title_activity_statpanselect">StatpanselectActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_houcheselect">HoucheselectActivity</string>
    <string name="title_activity_zhangpanselect">ZhangpanselectActivity</string>
    <string name="title_activity_shangingselect">ShangingselectActivity</string>
    <string name="title_activity_eventstart">EventstartActivity</string>
    <string name="title_activity_eventchack">EventchackActivity</string>
    <string name="title_activity_enmery">EnmeryActivity</string>
    <string name="title_activity_meetnotiy">MeetnotiyActivity</string>
    <string name="title_activity_file_make">FileMakeActivity</string>
    <string name="title_activity_xianluselect">XianluselectActivity</string>
    <string name="title_activity_chepanselect">ChepanselectActivity</string>
    <string name="title_activity_pinpanselect">PinpanselectActivity</string>
    <string name="title_activity_chenumselect">ChenumselectActivity</string>
    <string name="title_activity_orderselect">OrderselectActivity</string>
    <string name="title_activity_stit">StitActivity</string>
    <string name="title_activity_elc_mah">ElcMahActivity</string>
    <string name="title_activity_fifty">FiftyActivity</string>
    <string name="title_activity_feedselect">FeedselectActivity</string>
    <string name="title_activity_feedonlog">FeedonlogActivity</string>
    <string name="title_activity_hostroy">HostroyActivity</string>
    <string name="title_activity_carremaind">CarremaindActivity</string>
    <string name="title_activity_changeselect">ChangeselectActivity</string>
    <string name="title_activity_complnews">ComplnewsActivity</string>
    <string name="title_activity_carnews">CarnewsActivity</string>
    <string name="title_activity_medianews">MedianewsActivity</string>
    <string name="title_activity_helpinto">HelpintoActivity</string>
    <string name="title_activity_lineselect_child">LineselectChildActivity</string>
    <string name="title_activity_xianluselect_child">XianluselectChildActivity</string>
    <string name="title_activity_roadnameselect_child">RoadnameselectChildActivity</string>
    <string name="title_activity_chepan_childselect">ChepanChildselectActivity</string>
    <string name="title_activity_pinpan_childselect">PinpanChildselectActivity</string>
    <string name="title_activity_chennum_child">ChennumChildActivity</string>
    <string name="title_activity_orderselect_child">OrderselectChildActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_web_views">WebViewsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nweb_view">NWebViewActivity</string>
    <string name="title_activity_ffity_child">FfityChildActivity</string>
    <string name="title_activity_util_stat_zone_web_view">UtilStatZoneWebView</string>
    <string name="title_activity_util_stat_road_line_web_view">UtilStatRoadLineWebView</string>
    <string name="title_activity_util_stat_num_web_view">UtilStatNumWebView</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_event_get_and_do">EventGetAndDoActivity</string>
    <string name="title_activity_event_live_working">EventLiveWorkingActivity</string>
    <string name="take_photo">现在拍照</string>
    <string name="pick_from_album">从图库中选取</string>
    <string name="cancel">取消</string>
    <string name="photo">照片</string>
    <string name="title_activity_event_chack_items">EventChackItemsActivity</string>
    <string name="title_activity_check_pic_big">CheckPicBigActivity</string>
    <string name="title_activity_event_show_detail">EventShowDetailActivity</string>
    <string name="title_activity_event_send_update">EventSendUpdateActivity</string>
    <string name="title_activity_event_check_items_shen_he">EventCheckItemsShenHeActivity</string>
    <string name="title_activity_event_check_items_finish">EventCheckItemsFinishActivity</string>
    <string name="title_activity_event_check_items_update_send">EventCheckItemsUpdateSendActivity</string>
    <string name="title_activity_meeting_notie_item_activitty">MeetingNotieItemActivitty</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_fa_wen_detail">FaWenDetailActivity</string>
    <string name="title_activity_event_he_tong_detail">EventHeTongDetailActivity</string>
    <string name="title_activity_media_news_item">MediaNewsItemActivity</string>
    <string name="title_activity_career_news_web_view">CareerNewsWebView</string>
    <string name="title_activity_msg_screen_task_progress">MsgScreenTaskProgress</string>
    <string name="title_activity_msg_screen_task">MsgScreenTask</string>
    <string name="title_activity_feed_send_again">FeedSendAgainActivity</string>

</resources>