<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="12"
        android:background="@color/title_color"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/titleback_shiwuselect"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/img_title_bg_selector"
            android:button="@null" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/event"
            android:textColor="@color/txtcoloc" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@color/txtcoloc"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/llinear31"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/llayout_stat_bg_selector"
            android:clickable="true" >

            <ImageView
                android:id="@+id/img_shiwu_eventstart"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:padding="5dip"
                android:src="@drawable/m07" />

            <TextView
                android:id="@+id/tv_shiwu_eventstart"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/rb_items_eventstart"
                android:textColor="#000000" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/items_textview_bg" />

        <LinearLayout
            android:id="@+id/llinear32"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/llayout_stat_bg_selector"
            android:clickable="true" >

            <ImageView
                android:id="@+id/img_shiwu_eventcheck"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:padding="5dip"
                android:src="@drawable/m08" />

            <TextView
                android:id="@+id/tv_shiwu_eventcheck"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/rb_items_eventchack"
                android:textColor="#000000" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/items_textview_bg" />

        <LinearLayout
            android:id="@+id/llinear33"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/llayout_stat_bg_selector"
            android:clickable="true" >

            <ImageView
                android:id="@+id/img_shiwu_emeny"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:padding="5dip"
                android:src="@drawable/m09" />

            <TextView
                android:id="@+id/tv_shiwu_emeny"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/rb_items_jinjievent"
                android:textColor="#000000" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/items_textview_bg" />

        <LinearLayout
            android:id="@+id/llinear34"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/llayout_stat_bg_selector"
            android:clickable="true" >

            <ImageView
                android:id="@+id/img_shiwu_huiyi"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:padding="5dip"
                android:src="@drawable/m10" />

            <TextView
                android:id="@+id/tv_shiwu_huiyi"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/rb_items_meetnotiy"
                android:textColor="#000000" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/items_textview_bg" />

        <LinearLayout
            android:id="@+id/llinear35"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/llayout_stat_bg_selector"
            android:clickable="true" >

            <ImageView
                android:id="@+id/img_shiwu_wenjian"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:padding="5dip"
                android:src="@drawable/m11" />

            <TextView
                android:id="@+id/tv_shiwu_wenjian"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/rb_items_filejianfa"
                android:textColor="#000000" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/items_textview_bg" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2.5" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>