<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="12"
        android:background="@color/title_color"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/titleback_zongheselect"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/img_title_bg_selector"
            android:button="@null"
             />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/items_utilselect"
            android:textColor="@color/txtcoloc" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/llinear21"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/llayout_stat_bg_selector"
            android:clickable="true" >

            <ImageView
                android:id="@+id/img_zhandian_luming"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:padding="5dip"
                android:src="@drawable/m03" />

            <TextView
                android:id="@+id/tv_zhanpai_zonghe"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/rb_items_statpanselect"
                android:textColor="#000000" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/items_textview_bg" />

        <LinearLayout
            android:id="@+id/llinear22"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/llayout_stat_bg_selector"
            android:clickable="true" >

            <ImageView
                android:id="@+id/img_houche_zonghe"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:padding="5dip"
                android:src="@drawable/m04" />

            <TextView
                android:id="@+id/tv_houche_zonghe"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/rb_items_houcheselect"
                android:textColor="#000000" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/items_textview_bg" />

        <LinearLayout
            android:id="@+id/llinear23"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/llayout_stat_bg_selector"
            android:clickable="true" >

            <ImageView
                android:id="@+id/img_fifth_zonghe"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:padding="5dip"
                android:src="@drawable/m05" />

            <TextView
                android:id="@+id/tv_fifth_zonghe"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/rb_items_zhangpanselect"
                android:textColor="#000000" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/items_textview_bg" />

        <LinearLayout
            android:id="@+id/llinear24"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/llayout_stat_bg_selector"
            android:clickable="true" >

            <ImageView
                android:id="@+id/img_light_zonghe"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:padding="5dip"
                android:src="@drawable/m06" />

            <TextView
                android:id="@+id/tv_light_zonghe"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/rb_items_shangingselect"
                android:textColor="#000000" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/items_textview_bg" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/txtcoloc"
            android:layout_weight="2" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>